@@ -72,7 +72,7 @@ while (my $c=shift)
 	$dev=$c;
 	next;
     }
-    elsif ($c eq '-v')
+    elsif ($c eq '-v' or $c eq '--version')
     {
 	print "GNU pdfmom (groff) version @VERSION@\n";
 	exit;
@@ -142,3 +142,8 @@ else
     exit 1;
 }
 
+# Local Variables:
+# fill-column: 72
+# mode: CPerl
+# End:
+# vim: set cindent noexpandtab shiftwidth=2 softtabstop=2 textwidth=72:
